@@ -1,4 +1,6 @@
 <unreleased> Jim Winstead <jimw@mysql.com> (4.01)
+* Fix handling of table names with characters that did not match /\w/ in
+  the column_info method. (Bug #22005, reported by Philip Stoev)
 * Fix handling of negative integers bound to a column marked as SQL_INTEGER.
   [rt.cpan.org #18976], patch from Mike Schilli.
 * Add support for the primary_key_info method. [rt.cpan.org #8541]
